--- a/src/assets/css/vars_mixins/_vars.scss
+++ b/src/assets/css/vars_mixins/_vars.scss
@@ -54,7 +54,7 @@ $c-sec: #d15645;
 //цвета текста
 $c-text: #0E0C04;
 $c-text2: #828282;
-$c-link: #4DAEEB;
+$c-link: #75787C;
 $c-gray: #BDBDBD; //цвет с вески
 //основные цвета макета
 $c-primary-black: #2A2C2C;
