--- a/src/mixins/swiper/mixin__swiper.pug
+++ b/src/mixins/swiper/mixin__swiper.pug
@@ -21,9 +21,9 @@ mixin swiper(args= {})
 				block
 		if (args.navigation)
 			button.swiper-button-prev.js-swiper-button-prev(class=args.arrow_prev_mod type='button' aria-label='Предыдущий слайд')
-				+icon('i-arrow-small')(style="width: 12px; height: 12px; transform: scale(-1,1)")
+				+icon('i-arrow-small')(style="width: 24px; height: 24px;")
 			button.swiper-button-next.js-swiper-button-next(class=args.arrow_next_mod type='button' aria-label='Следующий слайд')
-				+icon('i-arrow-small')(style="width: 12px; height: 12px")
+				+icon('i-arrow-small')(style="width: 24px; height: 24px")
 		if (args.pagination)
 			.swiper-pagination.js-swiper-pagination(class= args.pagination_mod)
 		if (args.scrollBar)
