--- a/src/components/a-components/critical.scss
+++ b/src/components/a-components/critical.scss
@@ -82,6 +82,31 @@
 	}
 }
 
+.link{
+	color: $c-link;
+	position: relative;
+	display: inline-flex;
+	align-items: center;
+	&:before{
+		content: '';
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		right: 100%;
+		height: 1px;
+		background-color: $c-link;
+		transition: all ease .3s;
+	}
+	@media (min-width: $md){
+		&:hover{
+			&:before{
+				right: 0;
+			}
+		}
+	}
+}
+
+
 .preloader {
 	position: relative;
 
