--- a/src/assets/css/common/_fonts.scss
+++ b/src/assets/css/common/_fonts.scss
@@ -1,22 +1,22 @@
 @font-face {
-	font-family: "OpenSans";
-	src: url("/local/templates/html/fonts/NotoSans-Regular.woff") format("woff");
+	font-family: "NotoSans";
+	src: url("/dist/fonts/NotoSans-Regular.woff") format("woff");
 	font-style: normal;
 	font-weight: 400;
 	font-display: swap;
 }
 
 @font-face {
-	font-family: "OpenSans";
-	src: url("/local/templates/html/fonts/NotoSans-Bold.woff") format("woff");
+	font-family: "NotoSans";
+	src: url("/dist/fonts/NotoSans-Bold.woff") format("woff");
 	font-style: normal;
 	font-weight: 600;
 	font-display: swap;
 }
 
 @font-face {
-	font-family: "OpenSans";
-	src: url("/local/templates/html/fonts/NotoSans-Black.woff") format("woff");
+	font-family: "NotoSans";
+	src: url("/dist/fonts/NotoSans-Black.woff") format("woff");
 	font-style: normal;
 	font-weight: 800;
 	font-display: swap;
