--- a/src/components/personal-favourites/personal-favourites.pug
+++ b/src/components/personal-favourites/personal-favourites.pug
@@ -1,2 +1,2 @@
 include ../../components/catalog-targets/catalog-targets
-include ../../components/catalog-product-list/catalog-product-list-favourites
+include ../product-list/catalog-product-list-favourites
