--- a/src/components/personal-favourites/personal-subscribe.pug
+++ b/src/components/personal-favourites/personal-subscribe.pug
@@ -1,1 +1,1 @@
-include ../../components/catalog-product-list/catalog-product-list-subscribe
+include ../product-list/catalog-product-list-subscribe
