--- a/src/components/product-list/catalog-product-list-brands.pug
+++ b/src/components/product-list/catalog-product-list-brands.pug
@@ -3,7 +3,7 @@
 script.
 	//- remove on integration
 	setTimeout(() => {
-		$('.catalog-product-list').removeClass('preloader');
+		$('.product-list').removeClass('preloader');
 	},2000)
 
 
