--- a/src/layout/layout.pug
+++ b/src/layout/layout.pug
@@ -45,7 +45,7 @@ html(lang='ru-RU')
 
 
 
-	body.no-transition.no-js(class = pageBodyClass)
+	body(class = pageBodyClass)
 		script.
 			document.querySelector('body').classList.remove('no-js');
 
