--- a/src/mixins/swiper/style.scss
+++ b/src/mixins/swiper/style.scss
@@ -127,7 +127,7 @@
 
 	.icon {
 		fill: transparent;
-		transform: scale(-1,1);
+		//transform: scale(-1,1);
 	}
 
 	//@media (max-width: $sm - 1) {
