--- a/src/pages/index/index.pug
+++ b/src/pages/index/index.pug
@@ -16,16 +16,17 @@ block main
     }
     )
 
-    include ../../components/index-utp/index-utp
-    include ../../components/index-category/index-category
+    //include ../../components/index-utp/index-utp
+    include ../../components/index-prices/index-prices
+    //include ../../components/index-category/index-category
     include ../../components/product-slider/product-slider
-    include ../../components/product-slider/product-slider-bg
-    include ../../components/index-banners/index-banners
-    include ../../components/product-slider/product-slider-news
-    include ../../components/index-brands/index-brands
-    include ../../components/index-about/index-about
-    include ../../components/index-news/index-news
-    include ../../components/instagram-section/instagram-section
+    //include ../../components/product-slider/product-slider-bg
+    //include ../../components/index-banners/index-banners
+    //include ../../components/product-slider/product-slider-news
+    //include ../../components/index-brands/index-brands
+    //include ../../components/index-about/index-about
+    //include ../../components/index-news/index-news
+    //include ../../components/instagram-section/instagram-section
 
 
 
