--- a/src/assets/css/vars_mixins/_vars.scss
+++ b/src/assets/css/vars_mixins/_vars.scss
@@ -70,3 +70,19 @@ $green: #379f2f;
 $yellow: #e8a12b;
 $white: #fff;
 $black: #000;
+
+@mixin lazy {
+	position: absolute;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	top: 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	img{
+		width: 100%;
+		height: 100%;
+		object-fit: contain;
+	}
+}
