--- a/src/pages/index/index.pug
+++ b/src/pages/index/index.pug
@@ -20,6 +20,10 @@ block main
     include ../../components/index-prices/index-prices
     //include ../../components/index-category/index-category
     include ../../components/product-slider/product-slider
+    include ../../components/why/why-1
+    include ../../components/why/why-9
+    include ../../components/why/why-server
+    include ../../components/map/map
     //include ../../components/product-slider/product-slider-bg
     //include ../../components/index-banners/index-banners
     //include ../../components/product-slider/product-slider-news
