--- a/src/components/mixin__section-title/style.scss
+++ b/src/components/mixin__section-title/style.scss
@@ -2,12 +2,12 @@
 
 .section-title{
 	text-align: center;
-	padding: 80px 0 42px;
+	margin: 80px 0 42px;
 	@media (max-width: $lg - 1) {
-		padding-top: 54px;
+		margin-top: 54px;
 	}
 	@media (max-width: $sm - 1) {
-		padding: 30px 0 24px;
+		margin: 30px 0 24px;
 	}
 	&__subtitle{
 		font-size: 18px;
