--- a/src/components/product-slider/product-slider.pug
+++ b/src/components/product-slider/product-slider.pug
@@ -11,7 +11,7 @@
             }).product-slider.js-slider-product
                 .product-card-wrap
                     +product-card({
-                        mod: 'vps'
+                        mod: ''
                     })
                 .product-card-wrap
                     +product-card({
